poldit-ai-docker/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poldit-ai-server
  namespace: backend
spec:
  selector:
    app: poldit-ai-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
