poldit-ai-docker/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-poldit-ai
  namespace: backend
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  tls:
  - hosts:
    - ai.poldit.com
    secretName: letsencrypt-nginx
  rules:
    - host: ai.poldit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: poldit-ai-server
                port:
                  number: 5000
  ingressClassName: nginx
